added user data sample

--- a/examples/cs/examples_cs.csproj
+++ b/examples/cs/examples_cs.csproj
@@ -96,6 +96,7 @@
     <Compile Include="ex_curveboundingbox.cs" />
     <Compile Include="ex_custompython.cs" />
     <Compile Include="ex_dividebylength.cs" />
+    <Compile Include="ex_drawoverlay.cs" />
     <Compile Include="ex_dupborder.cs" />
     <Compile Include="ex_findobjectsbyname.cs" />
     <Compile Include="ex_constrainedcopy.cs" />
@@ -115,6 +116,7 @@
     <Compile Include="ex_sweep2.cs" />
     <Compile Include="ex_unrollsurface.cs" />
     <Compile Include="ex_unrollsurface2.cs" />
+    <Compile Include="ex_userdataCommand.cs" />
     <Compile Include="ex_zoomtoobject.cs" />
     <Compile Include="OptionsControl.cs">
       <SubType>UserControl</SubType>
