--- a/examples/vbnet/examples_vb.vbproj
+++ b/examples/vbnet/examples_vb.vbproj
@@ -108,6 +108,7 @@
     <Compile Include="ex_blockinsertionpoint.vb" />
     <Compile Include="ex_booleandifference.vb" />
     <Compile Include="ex_circlecenter.vb" />
+    <Compile Include="ex_closestpoint.vb" />
     <Compile Include="ex_commandlineoptions.vb" />
     <Compile Include="ex_createblock.vb" />
     <Compile Include="ex_curveboundingbox.vb" />
