--- a/examples/vbnet/examples_vb.vbproj
+++ b/examples/vbnet/examples_vb.vbproj
@@ -116,6 +116,7 @@
     <Compile Include="ex_drawoverlay.vb" />
     <Compile Include="ex_dupborder.vb" />
     <Compile Include="ex_edittext.vb" />
+    <Compile Include="ex_explodehatch.vb" />
     <Compile Include="ex_findobjectsbyname.vb" />
     <Compile Include="ex_constrainedcopy.vb" />
     <Compile Include="ex_gumball.vb" />
