Adding Toolbar support (windows build only)

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,4 @@
 /examples/opennurbs_build/cs/localize_3dm/example_read.csproj.user
 /examples/opennurbs_build/cs/localize_3dm/example_read.sdf
 /examples/opennurbs_build/cs/localize_3dm/example_read.suo
+/c/rh_uifile.cpp
