--- a/dotnet/RhinoCommon.csproj
+++ b/dotnet/RhinoCommon.csproj
@@ -276,6 +276,7 @@
     <Compile Include="rhino\rhinosdkfileoptions.cs" />
     <Compile Include="rhino\rhinosdkfileutilities.cs" />
     <Compile Include="rhino\rhinosdkfont.cs" />
+    <Compile Include="rhino\rhinosdkgetline.cs" />
     <Compile Include="rhino\rhinosdkgetplane.cs" />
     <Compile Include="rhino\rhinosdkgetxform.cs" />
     <Compile Include="rhino\rhinosdkgrips.cs" />
