Use ON_BOOL32 instead of BOOL for cross platform compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿
+
 /Debug
 /Rhino3dmIo.sdf
 /Rhino3dmIo.opensdf
@@ -182,3 +182,5 @@
 /c/rh_uifile.cpp
 /examples/rhino3dmio/example_read/bin
 /examples/rhino3dmio/example_read/obj
+
+*.userprefs
