--- a/dotnet/RhinoCommon.csproj
+++ b/dotnet/RhinoCommon.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -59,6 +59,7 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Mono|AnyCPU' ">
+    <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\Mono\</OutputPath>
     <DefineConstants>TRACE;MONO_BUILD USING_V5_SDK RHINO_SDK</DefineConstants>
     <DocumentationFile>bin\Mono\RhinoCommon.XML</DocumentationFile>
