move the commands that copies the dlls needed to create the nuget pkgs from the post-build event to the nuget scripts.

--- a/dotnet/Rhino3dmIO.csproj
+++ b/dotnet/Rhino3dmIO.csproj
@@ -329,8 +329,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>Copy "$(TargetPath)" "$(SolutionDir)nuget\nupkg_$(PlatformName)\lib\net40\"
-Copy "$(SolutionDir)$(ConfigurationName)\rhino3dmio_native.dll" "$(SolutionDir)nuget\nupkg_$(PlatformName)\NativeBinaries\$(PlatformName)\"</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
