--- a/examples/vbnet/examples_vb.vbproj
+++ b/examples/vbnet/examples_vb.vbproj
@@ -107,6 +107,7 @@
     <Compile Include="ex_circlecenter.vb" />
     <Compile Include="ex_closestpoint.vb" />
     <Compile Include="ex_commandlineoptions.vb" />
+    <Compile Include="ex_conduitarrowheads.vb" />
     <Compile Include="ex_createblock.vb" />
     <Compile Include="ex_curveboundingbox.vb" />
     <Compile Include="ex_customundo.vb" />
