--- a/examples/cs/examples_cs.csproj
+++ b/examples/cs/examples_cs.csproj
@@ -103,6 +103,7 @@
     <Compile Include="ex_conduitarrowheads.cs" />
     <Compile Include="ex_createblock.cs" />
     <Compile Include="ex_curveboundingbox.cs" />
+    <Compile Include="ex_curveclosestpoint.cs" />
     <Compile Include="ex_custompython.cs" />
     <Compile Include="ex_customundo.cs" />
     <Compile Include="ex_dividebylength.cs" />
