--- a/nuget/nupkg_x86/Rhino3dmIO.dll.nuspec
+++ b/nuget/nupkg_x86/Rhino3dmIO.dll.nuspec
@@ -2,16 +2,16 @@
 <package >
   <metadata>
     <id>Rhino3dmIO.dll-x86-Windows</id>
-    <version>5.1.30000.10</version>
+    <version>5.1.30000.14</version>
     <authors>McNeel</authors>
     <owners>McNeel</owners>
     <licenseUrl>https://github.com/mcneel/rhinocommon#legal-stuff</licenseUrl>
     <projectUrl>https://github.com/mcneel/rhinocommon</projectUrl>
-    <iconUrl>http://wiki.mcneel.com/_media/rhino_discourse_small.png</iconUrl>
+    <iconUrl>https://raw.github.com/mcneel/rhinocommon/master/nuget/3dmio.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Rhino3dmIO.  An Open NURBS library for your standalone .Net projects</description>
     <releaseNotes>Rhino3dmIO.  An Open NURBS library for your standalone .Net projects</releaseNotes>
-    <tags>Rhino 3D open NURBS</tags>
+    <tags>Rhino 3D open NURBS 32 Rhinoceros</tags>
   </metadata>
   <files>
     <file src="lib\net40\Rhino3dmIO.dll" target="lib\net40\Rhino3dmIO.dll" />
