--- a/examples/cs/examples_cs.csproj
+++ b/examples/cs/examples_cs.csproj
@@ -145,6 +145,8 @@
     <Compile Include="ex_objectlayer.cs" />
     <Compile Include="ex_orientonsrf.cs" />
     <Compile Include="ex_pickobjects.cs" />
+    <Compile Include="ex_printinstancedefinitions.cs" />
+    <Compile Include="ex_printinstancedefinitiontree.cs" />
     <Compile Include="ex_projectpointstobreps.cs" />
     <Compile Include="ex_rhinogettransform.cs" />
     <Compile Include="ex_sellayer.cs" />
